--- a/examples.html
+++ b/examples.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Introduction to ChatGPT</h1>
+        <h1>Main 2 Real World Examples</h1>
     </header>
 
     <nav>
@@ -20,46 +20,57 @@
         </ul>
     </nav>
 
-    <main>
+   <main>
+    <section>
+        <p>The main 2 real world examples we reasrched and wated to talk about was Education and Mental Health Support which is a new one w edidnt mention in the intro.</p>
+        <br>
+        <h2>Example 1: ChatGPT in Education</h2>
+        <p><strong>Extended Context:</strong><br>
+        In the post-pandemic world, education systems across the globe have leaned into digital tools to bridge gaps in learning. ChatGPT is a conversational AI tool developed by OpenAI (Hetler, 2025). It has quickly become a common academic tool for students and teachers alike. Its ability to generate human-like responses in seconds has made it useful for tutoring, brainstorming/outlining essays, developing codes, and practicing and understanding foreign language (Gewirtz, 2025, Should I use CHATGPT to write my essays?, 2025, and Macedo, 2024). Depending on the lens one looks at this tool from, it can either be useful to strengthen student learning or undermine student learning, which is why some schools integrated ChatGPT into learning management systems, while others ban its use altogether (Jones et al., 2023).</p>
 
-        <section>
-            <h2> What Is Our Target Technology?</h2>
-            <p>Our team chose ChatGPT, a cutting edge language model developed by OpenAI. ChatGPT is a form ofGenerative AI, specifically designed to understand and generate human like text. It belongs to a family of models called GPT (Generative Pre-trained Transformer), with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
-            <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more, all with astonishing coherence and fluidity.</p>
-            <p>It is capable of generating human-like responses across a wide range of tasks including:</p>
-            <ul> 
-                <li>Conversational interaction</li>
-                <li>Code generation and debugging</li>
-                <li>Summarization</li>
-                <li>Creative writing</li>
-                <li>Decision support</li>
-            </ul>
-          <br>
-        <h2>Why It Matters:</h2>
-        <p>ChatGPT is redefining communication, education, and automation at an unprecedented scale. As one of the fastest adopted AI tools in history, it has sparked both excitement and concern about how we interact with technology.</p>
-        </section>
-
-        <section>
-            <h2>Application Domains of ChatGPT.</h2>
-            <p>We selected ChatGPT because it sits at the center of a technological and ethical revolution. Since its public release in late 2022, ChatGPT has transformed industries including:</p>
-            <ul>
-                <li><strong>Education</strong> (homework help, tutoring, plagiarism concerns), <strong> Challenges: </strong> Increased risk of plagiarism, Reduced critical thinking. Unequal access to AI tools</li>
-                <li><strong>Business</strong> (customer service, content writing, decision support),<strong>Challenges: </strong>Replaces human jobs, AI-generated content may lack accountability, Miscommunication or lack of empathy</li>
-                <li><strong>Healthcare</strong> (medical advice, mental health apps),<strong>Challenges: </strong> Ethical issues with diagnosis and mental health reliance , Lack of certified medical oversight</li>
-                <li><strong>Software development</strong> (code generation, debugging assistance),<strong>Challenges: </strong> May produce incorrect or inefficient code, Risks of overeliance in professional environments</li>
-                <li><strong>Media</strong> (AI journalism, storytelling, and creative writing), <strong>Challenges: </strong>Potential spread of misinformation, Undermining human creativity and authorship</li>
-            </ul>
-              <p>The pace at which ChatGPT has been adopted is unmatched—but it also raises deep ethical questions:</p>
-            <ul>
-                <li>How should society respond to jobs potentially displaced by AI?</li>
-                <li>What responsibilities do developers have when releasing powerful AI tools?</li>
-                <li>How do we address bias, misinformation, or misuse?</li>
+        <h3>Why it matters:</h3>
+        <p>This application of ChatGPT is transforming educational models. It enables:</p>
+        <ul>
+            <li><strong>Personalized Learning:</strong> Students can receive tailored explanations that adjust to their pace and understanding. Based on a study, students who used chatbots had higher scores and stronger thesis statements. As a feedback tool, ChatGPT suggested accurate improvements to writing (Levine et al., 2024).</li>
+            <li><strong>Teacher Support:</strong> ChatGPT helps educators develop quizzes, exams, prompts, and even grade essays—saving time and reducing workload (Radeva, 2024).</li>
         </ul>
-            <p>These questions and their real world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
-            <br><br>
-            <p><strong>The YouTube video below is a 12-minute CNBC segment that explains why ChatGPT is such a big deal and a major part of our future.</strong></p>
-         </section>
-    </main>
+
+        <p><strong>Challenges:</strong></p>
+        <p>But this technological revolution is also sparking heated debates on whether its utilization is beneficial based on the following: </p>
+        <ul>
+            <li><strong>Cheating & Accountability:</strong> Students using ChatGPT to complete assignments raises questions of authorship and integrity (Yang, 2023).</li>
+            <li><strong>Digital Literacy Gaps:</strong> Not all students know how to use AI well. Pew Research shows only 19% of students aware of ChatGPT use it for schoolwork—with older students using it more (Lin, 2024).</li>
+            <li><strong>Digital Divide in AI:</strong> Access issues arise from underfunded schools, limited internet, and a lack of AI education (Digital Divide in AI Education, 2024).</li>
+        </ul>
+
+        <h3>Example:</h3>
+        <p>In New York City public schools, ChatGPT was initially banned due to fears of misuse and educational disruption. One of the reasons cited for this ban was that "the tool may be able to provide quick and easy answers to questions, it's does not could critical-thinking and problem-solving skills, which are essential for academic and lifelong success"(Yang, 2023). However, in 2023, the school districts began to reverse the ban and began exploring structured classroom use, emphasizing the need to teach students how to engage with AI ethically and productively. The reason credited for the reversal was that the AI tools like ChatGPT are here to stay and it is imperative that we teach students how to utilize such tools because these tools will be incorporated in their future careers (Klein, 2024). As such, to ensure lifelong success for students, it is crucial to teach students the importance of AI literacy and how to ethically use the tool (Klein, 2024). This shift underscores how schools that currently ban the usage must rethink digital literacy education. Klein also suggests that we need to better prepare educators to detect AI usage/plagiarism (Klein, 2024). </p>
+    </section>
+
+    <section>
+        <h2>Example 2: ChatGPT in Mental Health Support</h2>
+        <p><strong>Extended Context:</strong><br>
+        Mental health care remains under-discussed despite its importance. Nearly 1 billion people suffer from disorders like anxiety and depression, but many go untreated due to stigma and lack of access (WHO, 2019). ChatGPT is now used as a low-cost, 24/7 support tool offering mindfulness, emotional validation, and therapeutic dialogue. A National Library of Medicine survey found participants experienced positive impacts such as improved relationships and trauma processing (Siddals et al., 2024). Apps now use ChatGPT for mood tracking, stress management, and CBT exercises (Gubanova, 2025).Mental health support from ChatGPT will be popular amongst young adults and teens who are well versed with the digital era and for those who are  uncomfortable with traditional therapy formats.</p>
+
+        <h3>Why it matters:</h3>
+        <ul>
+            <li><strong>Access & Affordability:</strong>People without access to licensed therapists due to cost, stigma, or location will have a means to access mental support. In regions in Asia, where mental health is often ignored due to stigma can now be addressed using ChatGPT (Hale, 2023). ChatGPT is able to provide accessibility to immediate care that imperative for many people, especially since lack of access to mental health can be deadly for some individuals. “In theory, AI therapy could offer quicker and cheaper access to support than traditional mental health services, which suffer from staff shortages, long wait lists, and high costs, and allow sufferers to circumvent feelings of judgement and shame, especially I parts of world where mental illness remains taboo” (Hale, 2023). Due to ChatGPT’s ability to provide an immediate response when needed people can get instant ways to overcome feelings/emotions caused by an emotionally charged situation. In terms of scalability, ChatGPT can be interact with many users at the same time, there is no long wait, and it always available makes it a strong choice for many to utilize for therapeutic reasons (Hale, 2023). </li>
+        </ul>
+
+        <p><strong>Deeper Social Challenges:</strong></p>
+        <ul>
+            <li><strong>Risk of Harm:</strong> One of the drawback is that ChatGPT is not a mental health crisis tool. It may increase harm for an individual, especially for users with suicidal ideation or severe depression. Without a doubt ChatGPT is able to produce human- like communication to its users; however, it is equally important to note that it is not an actual human interaction (Kalam et al., 2024). Using ChatGPT “as a replacement for human interaction, social communication, and being heavily involved may increase social isolation, which is known to be a risk factor for depression” (Kalam et al., 2024). So, in this instance, utilization causes more harm than good because it further deteriorates ones mental health. “Research found that social isolation and loneliness are associated with depression symptoms” (Kalam et al., 2024).</li>
+            <li><strong>Emotional Oversimplification:</strong>It is also important to recognize that that emotion oversimplification can causes distress in users of younger age due to their inability to vocalize their emotions to the tool accurately. Unlike human mental health professionals, chatGPT is unable to identify nonverbal cues and body language that could be “subtle crisis signals from adolescents and children dealing with me tap health problems including suicide and homicidal thoughts” (Kalam et al., 2024). AI lacks empathy and understanding of nonverbal cues, which are extremely important in recognizing ones mental stability.</li>
+            <li><strong>Data Vulnerability:</strong>Just like any other scenario, when private personal information and technological advancement meet, there is a chance of data breeches. While using the tool as mean/replacement for mental health professional, users often share deeply personal experiences and without any stringent privacy protections, this data could be misused or sold by third-party platforms.  (Kalam et al., 2024).</li>
+        </ul>
+
+        <h3>Example:</h3>
+        <p>There are many real world example of people utilizing ChatGPT for therapy and the following examples showcase scenarios where utilizing the AI tool was a success:</p> 
+        <p>The first story is of Kayla, 19, who utilizes ChatGPT as a way to trauma dump on the tool because of its ability to provide human like responses in real time. She stated that she likes using ChatGPT because she does not have the financial means nor the time for a therapist. Utilizing ChatGPT as a therapist, allows her to balance her mental and emotional health. One of the things, she stated she liked about ChatGPT in such case is that she would receive and immediate unbiased advice and response to the said circumstance she wanted to discuss. (Arifi, 2023).</p>
+        <p>The second story is of Dan, 37, who utilized ChatGPT to help him understand and master cognitive reframing technique to overcome his mental health issues. He found that chatGPT was able to help him understand this technique better than his actual therapist was able to. He found it convenient but the drawback he noted was that this impacted his relationship with his wife. He would stay late to seek therapy in ChatGPT instead of his communicating his feelings and emotions with his spouse. (Prinay, 2023).</p>
+    </section>
+</main>
+
 
 
     
