--- a/examples.html
+++ b/examples.html
@@ -17,6 +17,7 @@
           <li><a href="examples.html">Real World Examples</a></li>
             <li><a href="ethical-anylsis.html">Ethics</a></li>
              <li><a href="stakeholders.html">Stakeholders</a></li>
+             <li><a href="citations.html">Sources</a></li>
         </ul>
     </nav>
 
