--- a/examples.html
+++ b/examples.html
@@ -23,7 +23,7 @@
 
    <main>
     <section>
-        <p>The main 2 real world examples we reasrched and wated to talk about was Education and Mental Health Support which is a new one w edidnt mention in the intro.</p>
+        <p>The main 2 real world examples we reasrched and wated to talk about was Education and Mental Health Support which is a new one we didn't mention in the intro.</p>
         <br>
         <h2>Example 1: ChatGPT in Education</h2>
         <p><strong>Extended Context:</strong><br>
