--- a/citations.html
+++ b/citations.html
@@ -64,6 +64,8 @@
     <li><a href="https://www.who.int/news-room/fact-sheets/detail/mental-disorders" target="_blank">World Health Organization. (2022, June 8). <i>Mental disorders</i>.</a></li>
     
     <li><a href="https://www.theguardian.com/us-news/2023/jan/06/new-york-city-schools-ban-ai-chatbot-chatgpt" target="_blank">Yang, M. (2023, January 6). <i>New York City schools ban AI chatbot that writes essays and answers prompts</i>. The Guardian.</a></li>
+
+    <li><a href="https://www.youtube.com/watch?v=pOmpqdlVCoo" target="_blank">CNBC. (2022, December 7). <i>Why OpenAI's ChatGPT is such a big deal</i> [Video]. YouTube.</a></li>
 </ul>
 
         </section>
