--- a/citations.html
+++ b/citations.html
@@ -28,6 +28,8 @@
             <h2>Work Cited:</h2>
             
 <ul>
+    <li>CNBC. (2022, December 7). <i>Why OpenAI's ChatGPT is such a big deal</i> [Video]. YouTube. (<a href="https://www.youtube.com/watch?v=pOmpqdlVCoo" target="_blank">https://www.youtube.com/watch?v=pOmpqdlVCoo</a>)</li>
+
     <li>Arifi, F. (2023, March 31). <i>People are using ChatGPT for therapy. Here’s what mental health experts think about that</i>. BuzzFeed News. (<a href="https://www.buzzfeednews.com/article/fjollaarifi/chatgpt-ai-for-therapy-mental-health" target="_blank">https://www.buzzfeednews.com/...</a>)</li>
 
     <li>AICompetence. (2024, December 20). <i>Digital divide in AI education: Creating equal opportunities</i>. (<a href="https://aicompetence.org/digital-divide-in-ai-education/" target="_blank">https://aicompetence.org/...</a>)</li>
@@ -66,7 +68,15 @@
 
     <li>Yang, M. (2023, January 6). <i>New York City schools ban AI chatbot that writes essays and answers prompts</i>. The Guardian. (<a href="https://www.theguardian.com/us-news/2023/jan/06/new-york-city-schools-ban-ai-chatbot-chatgpt" target="_blank">https://www.theguardian.com/...</a>)</li>
 
-    <li>CNBC. (2022, December 7). <i>Why OpenAI's ChatGPT is such a big deal</i> [Video]. YouTube. (<a href="https://www.youtube.com/watch?v=pOmpqdlVCoo" target="_blank">https://www.youtube.com/watch?v=pOmpqdlVCoo</a>)</li>
+    <li>Bender, E. M., Gebru, T., McMillan-Major, A., & Shmitchell, S. (2021). On the dangers of stochastic parrots: Can language models be too big? In <i>Proceedings of the 2021 ACM Conference on Fairness, Accountability, and Transparency</i> (pp. 610–623). (<a href="https://doi.org/10.1145/3442188.3445922" target="_blank">https://doi.org/10.1145/3442188.3445922</a>)</li>
+
+    <li>Brey, P. (2012). Anticipating ethical issues in emerging IT. <i>Ethics and Information Technology, 14</i>(4), 305–317. (<a href="https://doi.org/10.1007/s10676-012-9302-3" target="_blank">https://doi.org/10.1007/s10676-012-9302-3</a>)</li>
+
+    <li>Brynjolfsson, E., & McAfee, A. (2014). <i>The second machine age: Work, progress, and prosperity in a time of brilliant technologies</i>. W. W. Norton & Company.</li>
+
+    <li>Floridi, L., & Cowls, J. (2021). A unified framework of five principles for AI in society. <i>Harvard Data Science Review, 1</i>(1). (<a href="https://doi.org/10.1162/99608f92.8cd550d1" target="_blank">https://doi.org/10.1162/99608f92.8cd550d1</a>)</li>
+
+    <li>Moor, J. H. (2006). The nature, importance, and difficulty of machine ethics. <i>IEEE Intelligent Systems, 21</i>(4), 18–21. (<a href="https://doi.org/10.1109/MIS.2006.80" target="_blank">https://doi.org/10.1109/MIS.2006.80</a>)</li>
 </ul>
 
         </section>
