--- a/stakeholders.html
+++ b/stakeholders.html
@@ -21,38 +21,38 @@
         </ul>
     </nav>
 
-    <main>
-         <section>
-            <h2>Who Should Care:</h2>
-            <p> We analyzed ChatGPT using three ethical frameworks:</p>
-        <ul>
-            <li><strong>Policymakers</strong> </li>
-            <li><strong>Engineers and AI Developers</strong> </li>
-            <li><strong>Educators</strong></li>
-            <li><strong>Business Leaders</strong></li>
-            <li><strong>Global Citizens</strong></li>
-        </ul>
-    
-            <h2>Why:</h2>
-           <p>ChatGPT affects education quality, workplace structures, safety, and even democratic integrity. As AI becomes more embedded in everyday life, everyone will be impacted—for better or worse—depending on how the technology is used and governed.</p>
-        </section>
+ <main>
+  <section>
+    <h2>Who Should Care and Why It Matters:</h2>
+    <p>We analyzed ChatGPT through three ethical frameworks—utilitarianism, deontology, and virtue ethics—and found its impact spans across society. As AI like ChatGPT becomes more integrated into education, business, and public life, several key groups have a stake in how this technology is used and governed (Floridi & Cowls, 2021):</p>
+    <ul>
+      <li><strong>Policymakers:</strong> Responsible for creating legal frameworks that regulate AI transparency, safety, labor impacts, and misinformation (Brey, 2012).</li>
+      <li><strong>Engineers and AI Developers:</strong> Those building these systems must ensure fairness, prevent misuse, and improve safety through ethical design practices (Bender et al., 2021).</li>
+      <li><strong>Educators:</strong> Must adapt teaching methods and promote AI literacy to help students critically engage with these tools.</li>
+      <li><strong>Business Leaders:</strong> Need to use AI ethically by retraining employees, being transparent, and ensuring human-AI collaboration.</li>
+      <li><strong>Global Citizens:</strong> Everyday users must understand how AI affects the information they consume and their daily decisions.</li>
+    </ul>
 
-        <section>
-            <h2>Recommendations to Stakeholders.</h2>
-            <p>Stakeholders and what they should do: </p>
-        <ul>
-            <li><strong>Policymakers: </strong> Develop clear laws around transparency, safety testing, and ethical use.</li>
-            <li><strong>Developers: </strong>Prevent misuse, test for bias, and improve user safety.</li>
-            <li><strong>Educators: </strong> Teach Teach AI literacy, use ChatGPT to enhance learning, not replace it.</li>
-            <li><strong>Business Owners: </strong> Be transparent about AI use; retrain and upskill staff.</li>
-            <li><strong>Citizens(The people of the world): </strong> Stay informed, question AI responses, and use critical thinking.</li>
-        </ul>
-        <br>
-    <p>Ultimately, the future of ChatGPT and similar AI tools depends on how responsibly we choose to develop, regulate, and use them balancing innovation with ethics to ensure technology serves the public good.</p>
-        </section>
+    <h2>Why Everyone Should Care:</h2>
+    <p>ChatGPT influences education quality, job structures, safety, and even democratic integrity. Its societal impact—positive or negative—depends on how it's developed, implemented, and regulated. If misused, it can reinforce bias, spread misinformation, or displace jobs; if used responsibly, it can enhance productivity, creativity, and learning (Bender et al., 2021).</p>
+  </section>
 
-      
-    </main>
+  <section>
+    <h2>Recommendations to Stakeholders</h2>
+    <p>Each group has a role in shaping the ethical future of AI:</p>
+    <ul>
+      <li><strong>Policymakers:</strong> Enact laws that ensure AI transparency, safety testing, and ethical usage.</li>
+      <li><strong>Developers:</strong> Proactively reduce bias, build safeguards against misuse, and improve AI explainability.</li>
+      <li><strong>Educators:</strong> Promote AI literacy and use ChatGPT to support—not replace—critical thinking and learning.</li>
+      <li><strong>Business Leaders:</strong> Clearly disclose AI usage and upskill employees to work alongside AI tools.</li>
+      <li><strong>Global Citizens:</strong> Stay informed, question AI-generated content, and engage in thoughtful, critical use of technology.</li>
+    </ul>
+    <br>
+    <p>Ultimately, the future of ChatGPT and similar AI tools depends on how responsibly we choose to develop, regulate, and use them—balancing innovation with ethics to ensure technology serves the public good (Floridi & Cowls, 2021).</p>
+  </section>
+  
+</main>
+
 
     <footer>
         <p>&copy;IT-304 Final Project</p>
