--- a/stakeholders.html
+++ b/stakeholders.html
@@ -29,12 +29,13 @@
       <li><strong>Policymakers:</strong> Responsible for creating legal frameworks that regulate AI transparency, safety, labor impacts, and misinformation (Brey, 2012).</li>
       <li><strong>Engineers and AI Developers:</strong> Those building these systems must ensure fairness, prevent misuse, and improve safety through ethical design practices (Bender et al., 2021).</li>
       <li><strong>Educators:</strong> Must adapt teaching methods and promote AI literacy to help students critically engage with these tools.</li>
-      <li><strong>Business Leaders:</strong> Need to use AI ethically by retraining employees, being transparent, and ensuring human-AI collaboration.</li>
+      <li><strong>Business Leaders:</strong> Need to use AI ethically by retraining employees, being transparent, and ensuring human AI collaboration.</li>
       <li><strong>Global Citizens:</strong> Everyday users must understand how AI affects the information they consume and their daily decisions.</li>
     </ul>
 
     <h2>Why Everyone Should Care:</h2>
-    <p>ChatGPT influences education quality, job structures, safety, and even democratic integrity. Its societal impact—positive or negative—depends on how it's developed, implemented, and regulated. If misused, it can reinforce bias, spread misinformation, or displace jobs; if used responsibly, it can enhance productivity, creativity, and learning (Bender et al., 2021).</p>
+    <p>ChatGPT directly affects Education, Workplaces/Buesniess, Media and everything else we mentioned so far and more.</p>
+    <p>The impact of ChatGPT will depend on how it is used.</p>
   </section>
 
   <section>
@@ -43,15 +44,15 @@
     <ul>
       <li><strong>Policymakers:</strong> Enact laws that ensure AI transparency, safety testing, and ethical usage.</li>
       <li><strong>Developers:</strong> Proactively reduce bias, build safeguards against misuse, and improve AI explainability.</li>
-      <li><strong>Educators:</strong> Promote AI literacy and use ChatGPT to support—not replace—critical thinking and learning.</li>
+      <li><strong>Educators:</strong> Promote AI literacy and use ChatGPT to support not replace critical thinking and learning.</li>
       <li><strong>Business Leaders:</strong> Clearly disclose AI usage and upskill employees to work alongside AI tools.</li>
-      <li><strong>Global Citizens:</strong> Stay informed, question AI-generated content, and engage in thoughtful, critical use of technology.</li>
+      <li><strong>Global Citizens:</strong> Stay informed, question AI generated content, and engage in thoughtful, critical use of technology.</li>
     </ul>
     <br>
     <p>Ultimately, the future of ChatGPT and similar AI tools depends on how responsibly we choose to develop, regulate, and use them—balancing innovation with ethics to ensure technology serves the public good (Floridi & Cowls, 2021).</p>
   </section>
-  
 </main>
+
 
 
     <footer>
