--- a/stakeholders.html
+++ b/stakeholders.html
@@ -35,7 +35,7 @@
 
     <h2>Why Everyone Should Care:</h2>
     <p>ChatGPT directly affects Education, Workplaces/Buesniess, Media and everything else we mentioned so far and more.</p>
-    <p>The impact of ChatGPT will depend on how it is used.</p>
+    <p>The impact of ChatGPT will depend on how it is used and how the technolgoy advances overtime, but no matter who you are it will make some sort of impact on everyones day to day life.</p>
   </section>
 
   <section>
