--- a/stakeholders.html
+++ b/stakeholders.html
@@ -24,7 +24,7 @@
  <main>
   <section>
     <h2>Who Should Care and Why It Matters:</h2>
-    <p>We analyzed ChatGPT through three ethical frameworks utilitarianism, deontology, and virtue ethics and found its impact spans across society. As AI like ChatGPT becomes more integrated into education, business, and public life, several key groups have a stake in how this technology is used and governed (Floridi & Cowls, 2021):</p>
+    <p>We analyzed ChatGPT through three ethical frameworks <strong>>utilitarianism</strong>, <strong>deontology</strong>, and <strong>virtue ethics</strong> - and found its impact spans across society. As AI like ChatGPT becomes more integrated into education, business, and public life, several key groups have a stake in how this technology is used and governed (Floridi & Cowls, 2021):</p>
     <ul>
       <li><strong>Policymakers:</strong> Responsible for creating legal frameworks that regulate AI transparency, safety, labor impacts, and misinformation (Brey, 2012).</li>
       <li><strong>Engineers and AI Developers:</strong> Those building these systems must ensure fairness, prevent misuse, and improve safety through ethical design practices (Bender et al., 2021).</li>
