--- a/stakeholders.html
+++ b/stakeholders.html
@@ -46,7 +46,7 @@
       <li><strong>Developers:</strong> Proactively reduce bias, build safeguards against misuse, and improve AI explainability.</li>
       <li><strong>Educators:</strong> Promote AI literacy and use ChatGPT to support not replace critical thinking and learning.</li>
       <li><strong>Business Leaders:</strong> Clearly disclose AI usage and upskill employees to work alongside AI tools.</li>
-      <li><strong>Global Citizens:</strong> Stay informed, question AI generated content, and engage in thoughtful, critical use of technology.</li>
+      <li><strong>Global Citizens(the people of the world):</strong> Stay informed, question AI generated content, and engage in thoughtful, critical use of technology.</li>
     </ul>
     <br>
     <p>Ultimately, the future of ChatGPT and similar AI tools depends on how responsibly we choose to develop, regulate, and use them balancing innovation with ethics to ensure technology serves the public good (Floridi & Cowls, 2021).</p>
