--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
     <!-- ✅ Correct image placement -->
     <div style="position: fixed; bottom: 0; left: 0; z-index: 10;">
-  <img src="images/chatgpt-ethics.png" 
+  <img src="ChatGPT-introduction.jpg.webp" 
        alt="ChatGPT Ethical Issues Infographic" 
        width="300">
 </div>
+
