--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
     </footer>
 
     <!-- ✅ Correct image placement -->
-    <div style="position: fixed; bottom: 0; left: 0; z-index: 10;">
+    <div style="position: fixed; bottom: 80px; left: 20px; z-index: 10;">
   <img src="ChatGPT-introduction.jpg.webp" 
        alt="ChatGPT Ethical Issues Infographic" 
-       width="300">
+       width="400">
 </div>
+
 
