--- a/index.html
+++ b/index.html
@@ -77,11 +77,8 @@
         <p>&copy;IT-304 Final Project</p>
     </footer>
 
-    <!-- ✅ Correct image placement -->
-    <div style="position: fixed; bottom: 80px; left: 20px; z-index: 10;">
-  <img src="ChatGPT-introduction.jpg.webp" 
-       alt="ChatGPT Ethical Issues Infographic" 
-       width="400">
-</div>
+</body>
+</html>
+
 
 
