--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </ul>
             <p>These questions and their real world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
             <br><br>
-            <p><strong>The YouTube video below is a 12-minute CNBC segment that explains why ChatGPT is such a big deal and a major part of our future.</strong></p>
+            <p><strong>The YouTube video below is a 12-minute CNBC segment that explains what ChatGPT is and why it is such a big deal and a major part of our future.</strong></p>
         </section>
     </main>
 
