--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
         </iframe>
     </div>
 
+    <a href="https://studiodeltadesigns.com/introduction-to-chatgpt/" target="_blank">
+        <img src="/mnt/data/468baab5-f848-474b-8847-7e62a25d78fa.png" alt="Introducing ChatGPT" class="bottom-left-image">
+    </a>
+
     <footer>
         <p>&copy;IT-304 Final Project</p>
     </footer>
