--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         </ul>
     </nav>
 
+        <a href="https://studiodeltadesigns.com/introduction-to-chatgpt/" target="_blank">
+    <img src="images/chatgpt-intro.png" alt="Introducing ChatGPT" class="top-right-image">
+</a>
+
     <main>
         <section>
             <h2> What Is Our Target Technology?</h2>
@@ -72,10 +76,6 @@
             allowfullscreen>
         </iframe>
     </div>
-
-    <a href="https://studiodeltadesigns.com/introduction-to-chatgpt/" target="_blank">
-        <img src="/mnt/data/468baab5-f848-474b-8847-7e62a25d78fa.png" alt="Introducing ChatGPT" class="bottom-left-image">
-    </a>
 
     <footer>
         <p>&copy;IT-304 Final Project</p>
