--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </nav>
 
         <a href="https://studiodeltadesigns.com/introduction-to-chatgpt/" target="_blank">
-    <img src="images/chatgpt-intro.png" alt="Introducing ChatGPT" class="top-right-image">
+  <img src="images/chatgpt-intro.png" alt="Introducing ChatGPT" style="float: right; width: 400px; height: auto; margin: 20px;">
+</a>
+
 </a>
 
     <main>
