--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="citations.html">Sources</a></li>
         </ul>
     </nav>
-
+   <a href="https://studiodeltadesigns.com/introduction-to-chatgpt/" target="_blank">
   <img src="images/chatgpt-intro.png" alt="Introducing ChatGPT" style="float: right; width: 400px; height: auto; margin: 20px;">
 </a>
 
