--- a/citations.html
+++ b/citations.html
@@ -30,6 +30,8 @@
             <ul>
 <li>CNBC. (2022, December 7). <i>Why OpenAI's ChatGPT is such a big deal</i> [Video]. YouTube. (<a href="https://www.youtube.com/watch?v=pOmpqdlVCoo" target="_blank">https://www.youtube.com/watch?v=pOmpqdlVCoo</a>)</li>
 
+<li>Studio Delta Designs. (2023, July 31). <em>Introduction to ChatGPT</em>. (<a herf = "https://studiodeltadesigns.com/introduction-to-chatgpt/">https://studiodeltadesigns.com/introduction-to-chatgpt/</a>)</li>
+
 <li>Arifi, F. (2023, March 31). <i>People are using ChatGPT for therapy. Here’s what mental health experts think about that</i>. BuzzFeed News. (<a href="https://www.buzzfeednews.com/article/fjollaarifi/chatgpt-ai-for-therapy-mental-health" target="_blank">https://www.buzzfeednews.com/...</a>)</li>
 
 <li>AICompetence. (2024, December 20). <i>Digital divide in AI education: Creating equal opportunities</i>. (<a href="https://aicompetence.org/digital-divide-in-ai-education/" target="_blank">https://aicompetence.org/...</a>)</li>
