--- a/citations.html
+++ b/citations.html
@@ -80,11 +80,7 @@
 
 <li>Moor, J. H. (2006). The nature, importance, and difficulty of machine ethics. <i>IEEE Intelligent Systems, 21</i>(4), 18–21. (<a href="https://doi.org/10.1109/MIS.2006.80" target="_blank">https://doi.org/10.1109/MIS.2006.80</a>)</li>
 
-<li>StudyCorgi. <i>Responsible Use of ChatGPT: How to Apply the Tool for Studies</i>. (2023). 
-    <a href="https://studycorgi.com/blog/responsible-use-of-chatgpt-how-to-apply-the-tool-for-studies/" target="_blank">
-        https://studycorgi.com/blog/responsible-use-of-chatgpt-how-to-apply-the-tool-for-studies/
-    </a>
-</li>
+<li>StudyCorgi. <i>Responsible Use of ChatGPT: How to Apply the Tool for Studies</i>. (2023). (<a href="https://studycorgi.com/blog/responsible-use-of-chatgpt-how-to-apply-the-tool-for-studies/" target="_blank">https://studycorgi.com/blog/responsible-use-of-chatgpt-how-to-apply-the-tool-for-studies/</a>)</li>
 
     </ul>
 
