--- a/citations.html
+++ b/citations.html
@@ -30,7 +30,7 @@
             <ul>
 <li>CNBC. (2022, December 7). <i>Why OpenAI's ChatGPT is such a big deal</i> [Video]. YouTube. (<a href="https://www.youtube.com/watch?v=pOmpqdlVCoo" target="_blank">https://www.youtube.com/watch?v=pOmpqdlVCoo</a>)</li>
 
-<li>Studio Delta Designs. (2023, July 31). <em>Introduction to ChatGPT</em>. (<a herf = "https://studiodeltadesigns.com/introduction-to-chatgpt/">https://studiodeltadesigns.com/introduction-to-chatgpt/</a>)</li>
+<li>Studio Delta Designs. (2023, July 31). <em>Introduction to ChatGPT</em>. (<a herf = "https://studiodeltadesigns.com/introduction-to-chatgpt/" target="blank">https://studiodeltadesigns.com/introduction-to-chatgpt/</a>)</li>
 
 <li>Arifi, F. (2023, March 31). <i>People are using ChatGPT for therapy. Here’s what mental health experts think about that</i>. BuzzFeed News. (<a href="https://www.buzzfeednews.com/article/fjollaarifi/chatgpt-ai-for-therapy-mental-health" target="_blank">https://www.buzzfeednews.com/...</a>)</li>
 
