--- a/ethical-anylsis.html
+++ b/ethical-anylsis.html
@@ -20,6 +20,9 @@
              <li><a href="citations.html">Sources</a></li>
         </ul>
     </nav>
+        <a href="https://studycorgi.com/blog/responsible-use-of-chatgpt-how-to-apply-the-tool-for-studies/" target="_blank">
+  <img src="images/ethical-image.png" alt="Ethetical Image" style="float: right; width: 400px; height: auto; margin: 20px;">
+</a>
 
  <main>
     <section>
@@ -54,6 +57,17 @@
     </section>
 </main>
 
+     <div style="width: 560px; height: 315px; margin: 20px 0 20px auto;">
+        <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/pOmpqdlVCoo" 
+            frameborder="0" 
+            allow="autoplay; encrypted-media" 
+            allowfullscreen>
+        </iframe>
+    </div>
+    
 
     <footer>
         <p>&copy;IT-304 Final Project</p>
