--- a/stakeholders.html
+++ b/stakeholders.html
@@ -20,6 +20,11 @@
              <li><a href="citations.html">Sources</a></li>
         </ul>
     </nav>
+    <a href="https://silkflo.com/chatgpt-prompts-for-stakeholder-analysis/" target="_blank">
+  <img src="gpt-steakholders.webp" alt="GPT Steakholders" style="float: right; width: 400px; height: auto; margin: 20px;">
+</a>
+
+</a> 
 
  <main>
   <section>
