--- a/stakeholders.html
+++ b/stakeholders.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <a href="https://silkflo.com/chatgpt-prompts-for-stakeholder-analysis/" target="_blank">
-  <img src="gpt-steakholders.jpg" alt="GPT Steakholders" style="float: right; width: 400px; height: auto; margin: 20px;">
+  <img src="gpt-steakholders.png" alt="GPT Steakholders" style="float: right; width: 400px; height: auto; margin: 20px;">
 </a>
 
 </a> 
