--- a/citations.html
+++ b/citations.html
@@ -82,6 +82,8 @@
 
 <li>StudyCorgi. <i>Responsible Use of ChatGPT: How to Apply the Tool for Studies</i>. (2023). (<a href="https://studycorgi.com/blog/responsible-use-of-chatgpt-how-to-apply-the-tool-for-studies/" target="_blank">https://studycorgi.com/blog/responsible-use-of-chatgpt-how-to-apply-the-tool-for-studies/</a>)</li>
 
+<li>Silkflo. (n.d.). <i>ChatGPT prompts for stakeholder analysis</i>. (<a href="https://silkflo.com/chatgpt-prompts-for-stakeholder-analysis/" target="_blank">https://silkflo.com/chatgpt-prompts-for-stakeholder-analysis/</a>)</li>
+
     </ul>
 
         </section>
