--- a/examples.html
+++ b/examples.html
@@ -46,6 +46,16 @@
 
         <h3>Example:</h3>
         <p>In New York City public schools, ChatGPT was initially banned due to fears of misuse and educational disruption. One of the reasons cited for this ban was that "the tool may be able to provide quick and easy answers to questions, it's does not could critical-thinking and problem-solving skills, which are essential for academic and lifelong success"(Yang, 2023). However, in 2023, the school districts began to reverse the ban and began exploring structured classroom use, emphasizing the need to teach students how to engage with AI ethically and productively. The reason credited for the reversal was that the AI tools like ChatGPT are here to stay and it is imperative that we teach students how to utilize such tools because these tools will be incorporated in their future careers (Klein, 2024). As such, to ensure lifelong success for students, it is crucial to teach students the importance of AI literacy and how to ethically use the tool (Klein, 2024). This shift underscores how schools that currently ban the usage must rethink digital literacy education. Klein also suggests that we need to better prepare educators to detect AI usage/plagiarism (Klein, 2024). </p>
+   <div style="width: 560px; height: 315px; margin: 20px 0 20px auto;">
+        <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/watch?v=MF9_fsJEP1s" 
+            frameborder="0" 
+            allow="autoplay; encrypted-media" 
+            allowfullscreen>
+        </iframe>
+    </div>
     </section>
 
     <section>
@@ -69,6 +79,16 @@
         <p>There are many real world example of people utilizing ChatGPT for therapy and the following examples showcase scenarios where utilizing the AI tool was a success:</p> 
         <p>The first story is of Kayla, 19, who utilizes ChatGPT as a way to trauma dump on the tool because of its ability to provide human like responses in real time. She stated that she likes using ChatGPT because she does not have the financial means nor the time for a therapist. Utilizing ChatGPT as a therapist, allows her to balance her mental and emotional health. One of the things, she stated she liked about ChatGPT in such case is that she would receive and immediate unbiased advice and response to the said circumstance she wanted to discuss. (Arifi, 2023).</p>
         <p>The second story is of Dan, 37, who utilized ChatGPT to help him understand and master cognitive reframing technique to overcome his mental health issues. He found that chatGPT was able to help him understand this technique better than his actual therapist was able to. He found it convenient but the drawback he noted was that this impacted his relationship with his wife. He would stay late to seek therapy in ChatGPT instead of his communicating his feelings and emotions with his spouse. (Prinay, 2023).</p>
+   <div style="width: 560px; height: 315px; margin: 20px 0 20px auto;">
+        <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/watch?v=F6EaCUaPtMw" 
+            frameborder="0" 
+            allow="autoplay; encrypted-media" 
+            allowfullscreen>
+        </iframe>
+    </div>
     </section>
 </main>
 
