--- a/citations.html
+++ b/citations.html
@@ -84,6 +84,11 @@
 
 <li>Silkflo. (n.d.). <i>ChatGPT prompts for stakeholder analysis</i>. (<a href="https://silkflo.com/chatgpt-prompts-for-stakeholder-analysis/" target="_blank">https://silkflo.com/chatgpt-prompts-for-stakeholder-analysis/</a>)</li>
 
+<li>University of California Television (UCTV). (2023, July 25). <i>From Teacher to Chatbot: The Role of ChatGPT in Education</i> [Video]. YouTube. (<a href="https://www.youtube.com/watch?v=MF9_fsJEP1s_" target="_blank">https://www.youtube.com/watch?v=MF9_fsJEP1s_</a>)</li>
+
+<li>PRO Robots. (2024, Dec 8). <i>How ChatGPT Is Changing the Approach to Mental Health Support | New Technology</i> [Video]. YouTube. (<a href="https://www.youtube.com/watch?v=F6EaCUaPtMw" target="_blank">https://www.youtube.com/watch?v=F6EaCUaPtMw</a>)</li>
+
+
     </ul>
 
         </section>
